# fvar

./: CMakeLists.txt  README.md
cmake/: Config.cmake.in  fdictDefaultFlags.cmake  fdictFyppify.cmake  fdictOptions.cmake
src/: CMakeLists.txt  fdict.fypp.in  fdict_common.fypp  fdict_types.fypp
